--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,15 @@ license = Perl_5
 copyright_holder = Bruno Tavares
 copyright_year   = 2013
 
-version = 0.001
+version = 0.501
+
+[ReadmeAnyFromPod]
+type = markdown
+location = root
+filename = README.md
 
 [Prereqs]
-Mojolicious = 0 ;
+Mojolicious = 2.31 ;
 
 [AutoPrereqs]
 
