--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,9 @@ author  = Bruno Tavares <eu@brunotavares.net>
 license = Perl_5
 copyright_holder = Bruno Tavares
 copyright_year   = 2013
+version = 0.502
 
-version = 0.501
+[PkgVersion]
 
 [ReadmeAnyFromPod]
 type = markdown
