--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Mojolicious Plugin to manage user message(s) qeue(s)'
+abstract: 'Mojolicious Plugin to manage user message queue(s)'
 author:
   - 'Bruno Tavares <eu@brunotavares.net>'
 build_requires:
@@ -22,4 +22,4 @@ requires:
   Mojo::Base: 0
   Mojolicious: 2.31
   strict: 0
-version: 0.510
+version: 0.511
